6910464: Lookupswitch and Tableswitch default branches not recognized as safepoints

C1 does not recognize the default branch of a lookupswitch or tableswitch bytecode to be a safepoint if backward.

Reviewed-by: kvn, never